@@ -36,13 +36,15 @@
             Before reporting bugs, please try <a href="http://getfirebug.com/releases/firebug1.1/firebug-1.1.0b12.xpi">Firebug 1.1</a> </p>
                                        
             <h2>Firebug 1.1 Betas</h2>
-            <p><b>Recommended.</b> <a href="http://getfirebug.com/releases/firebug1.1/firebug-1.1.0b12.xpi">Firebug 1.1.0</a> has had many beta tests and is the current stable version</p>
+            <p> <a href="http://getfirebug.com/releases/firebug1.1/firebug-1.1.0b12.xpi">Firebug 1.1.0</a> has had many beta tests and is the current stable version</p>
             
             <h2>Firebug 1.2 Alphas</h2>
             <p>
             <a href="http://getfirebug.com/releases/firebug/1.2/firebug-@FIREBUG-VERSION@.xpi">Firebug 1.2</a>
-             focuses on performance improvements. Currently unstable, usable, and 
-             <a href="http://code.google.com/p/fbug/issues/list">bug reports</a> are welcome.</p>
+             focuses on performance improvements. Currently unstable, please read the 
+             <a href="http://code.google.com/p/fbug/source/browse/branches/firebug1.2/docs/ReleaseNotes_1.2.txt">1.2 release notes</a> 
+             before installing.  
+             </p>
             
             <h2>ChromeBug Alphas</h2>
             <p><a href="http://getfirebug.com/releases/chromebug/chromebug-@CHROMEBUG-VERSION@.xpi">ChromeBug</a> is Firebug for Firefox extensions. 
